@@ -1,7 +1,6 @@
 package info.kgeorgiy.ja.labazov.arrayset;
 
 import info.kgeorgiy.java.advanced.base.BaseTest;
-import net.java.quickcheck.Generator;
 import net.java.quickcheck.collection.Pair;
 import org.junit.Assert;
 import org.junit.FixMethodOrder;
@@ -9,7 +8,10 @@ import org.junit.Test;
 import org.junit.runners.MethodSorters;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 import static net.java.quickcheck.generator.CombinedGenerators.excludeValues;
 import static net.java.quickcheck.generator.CombinedGenerators.lists;
@@ -52,80 +54,37 @@ public class SortedSetTest extends BaseTest {
         for (final List<Integer> elements : someLists(integers())) {
             final SortedSet<Integer> set = set(elements);
             final SortedSet<Integer> treeSet = treeSet(elements);
-            assertEq(set, treeSet, "elements = " + elements);
+            assertEq(treeSet, set, "elements = " + elements);
         }
     }
 
     @Test
     public void test04_externalOrder() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            assertEq(
-                    set(elements, comparator),
-                    treeSet(elements, comparator),
-                    "(comparator = " + comparator + ", elements = " + elements + ")"
-            );
-        }
-    }
-
-    protected static Iterable<Pair<NamedComparator, List<Integer>>> withComparator() {
-        return somePairs(NAMED_COMPARATORS, lists(integers()));
+        test((elements, comparator, treeSet, set, context) -> assertEq(treeSet, set, context));
     }
 
     @Test
     public void test05_constructorPerformance() {
-        performance("constructor", () -> performanceSet(PERFORMANCE_SIZE));
-    }
-
-    @Test
-    public void test06_immutable() {
-        final SortedSet<Integer> set = set(Collections.singletonList(1));
-        checkUnsupported("add", () -> set.add(1));
-        checkUnsupported("addAll", () -> set.addAll(Collections.singletonList(1)));
-        checkUnsupported("clear", set::clear);
-        checkUnsupported("iterator.remove", () -> {
-            final Iterator<Integer> iterator = set.iterator();
-            iterator.next();
-            iterator.remove();
-        });
-        checkUnsupported("remove", () -> set.remove(1));
-        checkUnsupported("removeAll", () -> set.removeAll(Collections.singletonList(1)));
-        checkUnsupported("retainAll", () -> set.retainAll(Collections.singletonList(0)));
-    }
-
-    private static void checkUnsupported(final String method, final Runnable command) {
-        try {
-            command.run();
-            Assert.fail("Method '" + method + "' should throw UnsupportedOperationException");
-        } catch (final UnsupportedOperationException ignore) {
-        }
+        performance("constructor", SortedSetTest::performanceSet);
     }
 
     @Test
     public void test07_contains() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            final SortedSet<Integer> set = set(elements, comparator);
-            final String context = "(comparator = " + comparator + ", elements = " + elements + ")";
+        test((elements, comparator, treeSet, set, context) -> {
             for (final Integer element : elements) {
                 Assert.assertTrue("set should contains() element " + element + " " + context, set.contains(element));
             }
 
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
             for (final Integer element : someOneOf(excludeValues(integers(), elements))) {
                 Assert.assertEquals("contains(" + element + ") " + context, treeSet.contains(element), set.contains(element));
             }
-        }
+        });
     }
 
     @Test
     public void test08_containsPerformance() {
         performance("contains", () -> {
-            final SortedSet<Integer> set = performanceSet(PERFORMANCE_SIZE);
+            final SortedSet<Integer> set = performanceSet();
             for (final Integer element : set) {
                 Assert.assertTrue(null, set.contains(element));
             }
@@ -134,48 +93,33 @@ public class SortedSetTest extends BaseTest {
 
     @Test
     public void test09_containsAll() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            final SortedSet<Integer> set = set(elements, comparator);
-            final String context = "(comparator = " + comparator + ", elements = " + elements + ")";
+        test((elements, comparator, treeSet, set, context) -> {
             Assert.assertTrue("set should contains() all elements " + " " + context, set.containsAll(elements));
 
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
             for (final Integer element : someOneOf(excludeValues(integers(), elements))) {
                 final List<Integer> l = new ArrayList<>(elements);
                 elements.add(element);
                 Assert.assertEquals("containsAll(" + l + ") " + context, treeSet.containsAll(l), set.containsAll(l));
             }
-        }
-    }
-
-    @Test
-    public void test10_containsAllPerformance() {
-        performance("contains", () -> {
-            final SortedSet<Integer> set = performanceSet(PERFORMANCE_SIZE);
-            Assert.assertTrue(null, set.containsAll(new ArrayList<>(set)));
         });
     }
 
-    private static void performance(final String description, final Runnable runnable) {
+    protected static void performance(final String description, final Runnable runnable) {
         runnable.run();
 
         final long start = System.currentTimeMillis();
         runnable.run();
         final long time = System.currentTimeMillis() - start;
-        System.out.println("    " + description + " done in " + time + "ms");
+        System.err.println("    " + description + " done in " + time + "ms");
         Assert.assertTrue(description + " works too slow", time < PERFORMANCE_TIME);
     }
 
-    private SortedSet<Integer> performanceSet(final int size) {
-        NavigableSet<Integer> kek1 = ((NavigableSet<Integer>)set(new Random().ints().limit(size).boxed().collect(Collectors.toList()))).descendingSet();
+    protected static SortedSet<Integer> performanceSet() {
+        return performanceSet(PERFORMANCE_SIZE);
+    }
 
-        for (int i = 0; i < 69; i++) {
-            kek1 = kek1.subSet(kek1.first(), true, kek1.last(), true).descendingSet();
-        }
-        return kek1;
+    protected static SortedSet<Integer> performanceSet(final int size) {
+        return set(new Random().ints().limit(size).boxed().collect(Collectors.toList()));
     }
 
     private static List<Integer> toList(final SortedSet<Integer> set) {
@@ -183,65 +127,57 @@ public class SortedSetTest extends BaseTest {
     }
 
     protected static List<Number> toArray(final SortedSet<Integer> set) {
-        return Arrays.asList(set.toArray(new Number[0]));
+        return List.of(set.toArray(new Number[0]));
     }
 
     private static TreeSet<Integer> treeSet(final List<Integer> elements) {
         return new TreeSet<>(elements);
     }
 
-    private SortedSet<Integer> set(final List<Integer> elements) {
+    protected static SortedSet<Integer> set(final List<Integer> elements) {
         return create(new Object[]{elements}, Collection.class);
     }
 
-    protected SortedSet<Integer> set(final List<Integer> elements, final Comparator<Integer> comparator) {
-        return create(new Object[]{elements, comparator}, Collection.class, Comparator.class);
+    protected static void assertEq(final SortedSet<Integer> expected, final SortedSet<Integer> actual, final String context) {
+        Assert.assertEquals("invalid element order " + context, toList(expected), toList(actual));
+        Assert.assertEquals("invalid toArray " + context, toArray(actual), toArray(actual));
+        Assert.assertEquals("invalid set size " + context, expected.size(), (Object) actual.size());
+        Assert.assertEquals("invalid isEmpty " + context, expected.isEmpty(), actual.isEmpty());
+        Assert.assertSame("invalid comparator " + context, expected.comparator(), actual.comparator());
     }
 
-    protected static void assertEq(final SortedSet<Integer> set, final SortedSet<Integer> treeSet, final String context) {
-        Assert.assertEquals("invalid element order " + context, toList(treeSet), toList(set));
-        Assert.assertEquals("invalid toArray " + context, toArray(set), toArray(set));
-        Assert.assertEquals("invalid set size " + context, treeSet.size(), (Object) set.size());
-        Assert.assertEquals("invalid isEmpty " + context, treeSet.isEmpty(), set.isEmpty());
-        Assert.assertSame("invalid comparator " + context, treeSet.comparator(), set.comparator());
-    }
-
-    protected SortedSet<Integer> treeSet(final List<Integer> elements, final Comparator<Integer> comparator) {
-        final SortedSet<Integer> set = new TreeSet<>(comparator);
+    protected static <T, S extends SortedSet<T>> S treeSet(final Collection<T> elements, final Comparator<T> comparator) {
+        @SuppressWarnings("unchecked") final S set = (S) new TreeSet<>(comparator);
         set.addAll(elements);
         return set;
     }
 
-    protected static final class NamedComparator implements Comparator<Integer> {
-        private final String name;
-        private final Comparator<Integer> comparator;
-
-        private NamedComparator(final String name, final Comparator<Integer> comparator) {
-            this.name = name;
-            this.comparator = comparator != null ? comparator : Comparator.naturalOrder();
-        }
-
-        @Override
-        public int compare(final Integer o1, final Integer o2) {
-            return comparator.compare(o1, o2);
-        }
-
-        @Override
-        public String toString() {
-            return name;
-        }
+    @SuppressWarnings("unchecked")
+    protected static <T, S extends SortedSet<T>> S set(final Collection<T> elements, final Comparator<T> comparator) {
+        return (S) create(new Object[]{elements, comparator}, Collection.class, Comparator.class);
     }
-
-    private static final Generator<NamedComparator> NAMED_COMPARATORS = fixedValues(Arrays.asList(
-            new NamedComparator("Natural order", Integer::compare),
-            new NamedComparator("Reverse order", Comparator.comparingInt(Integer::intValue).reversed()),
+    
+    protected static final List<NamedComparator> NAMED_COMPARATORS = new ArrayList<>(List.of(
+            new NamedComparator("Natural order", java.lang.Integer::compare),
+            new NamedComparator("Reverse order", Comparator.comparingInt(java.lang.Integer::intValue).reversed()),
             new NamedComparator("Div 100", Comparator.comparingInt(i -> i / 100)),
-            new NamedComparator("Even first", Comparator.<Integer>comparingInt(i -> i % 2).thenComparing(Integer::intValue)),
-            new NamedComparator("All equal", Comparator.comparingInt(i -> 0)),
-            null
+            new NamedComparator("Even first", Comparator.<Integer>comparingInt(i -> i % 2).thenComparing(java.lang.Integer::intValue)),
+            new NamedComparator("All equal", Comparator.comparingInt(i -> 0))
     ));
 
-    private SortedSet<Integer> create(final Object[] params, final Class<?>... types) {
+    protected interface TestCase<T, S extends SortedSet<T>> {
+        void test(List<T> elements, Comparator<T> comparator, S model, S tested, String context);
+    }
+
+    protected static <S extends SortedSet<Integer>> void test(final TestCase<Integer, S> testCase) {
+        somePairs(fixedValues(NAMED_COMPARATORS), lists(integers())).forEach(e -> {
+            final List<Integer> elements = e.getSecond();
+            final NamedComparator comparator = e.getFirst();
+            testCase.test(elements, comparator, treeSet(elements, comparator), set(elements, comparator), "(comparator = " + comparator + ", elements = " + elements + ")");
+        });
+    }
+
+    protected static SortedSet<Integer> create(final Object[] params, final Class<?>... types) {
         try {
             @SuppressWarnings("unchecked") final
             SortedSet<Integer> set = (SortedSet<Integer>) loadClass().getConstructor(types).newInstance(params);
@@ -255,12 +191,8 @@ public class SortedSetTest extends BaseTest {
 
     @Test
     public void test11_comparator() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            Assert.assertSame("comparator() should return provided comparator", comparator, set(elements, comparator).comparator());
-        }
+        test((elements, comparator, treeSet, set, context) ->
+                Assert.assertSame("comparator() should return provided comparator", comparator, set.comparator()));
         for (final List<Integer> elements : someLists(integers())) {
             Assert.assertNull("comparator() should return null for default order", set(elements).comparator());
         }
@@ -268,71 +200,45 @@ public class SortedSetTest extends BaseTest {
 
     @Test
     public void test12_headSet() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-            final SortedSet<Integer> set = set(elements, comparator);
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
-
+        test((elements, comparator, treeSet, set, context) -> {
             for (final Integer element : inAndOut(elements)) {
-                assertEq(
-                        set.headSet(element),
-                        treeSet.headSet(element),
-                        "in headSet(" + element + ") (comparator = " + comparator + ", elements = " + elements + ")"
-                );
+                assertEq(treeSet.headSet(element), set.headSet(element), "in headSet(" + element + ") " + context);
             }
-        }
+        });
     }
 
     @Test
     public void test13_tailSet() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-            final SortedSet<Integer> set = set(elements, comparator);
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
-
+        test((elements, comparator, treeSet, set, context) -> {
             for (final Integer element : inAndOut(elements)) {
-                assertEq(
-                        set.tailSet(element),
-                        treeSet.tailSet(element),
-                        "in tailSet(" + element + ") (comparator = " + comparator + ", elements = " + elements + ")"
-                );
+                assertEq(treeSet.tailSet(element), set.tailSet(element), "in tailSet(" + element + ") " + context);
             }
-        }
+        });
     }
 
-    protected Collection<Integer> inAndOut(final List<Integer> elements) {
-        return concat(elements, someOneOf(excludeValues(integers(), elements)));
-    }
-
-    private Collection<Integer> concat(final Iterable<Integer> items1, final Iterable<Integer> items2) {
-        final List<Integer> list = new ArrayList<>();
-        items1.forEach(list::add);
-        items2.forEach(list::add);
-        return list;
+    protected static Collection<Integer> inAndOut(final Collection<Integer> elements) {
+        return Stream.of(
+                elements.stream().flatMap(e -> Stream.of(e, e - 1, e + 1)),
+                Stream.of(0, java.lang.Integer.MAX_VALUE, java.lang.Integer.MIN_VALUE),
+                StreamSupport.stream(someOneOf(excludeValues(integers(), elements)).spliterator(), false)
+        ).flatMap(Function.identity()).collect(Collectors.toList());
     }
 
     @Test
     public void test14_subSet() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-            final SortedSet<Integer> set = set(elements, comparator);
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
-
-            final Collection<Integer> all = values(elements);
+        test((elements, comparator, treeSet, set, context) -> {
+            final Collection<Integer> all = inAndOut(elements);
             for (final Pair<Integer, Integer> p : somePairs(fixedValues(all), fixedValues(all))) {
                 final Integer from = p.getFirst();
                 final Integer to = p.getSecond();
-                if (comparator == null ? from <= to : comparator.compare(from, to) <= 0) {
+                if (compare(comparator, from, to)) {
                     assertEq(
-                            set.subSet(from, to),
-                            treeSet.subSet(from, to),
-                            "in subSet(" + from + ", " + to + ") (comparator = " + comparator + ", elements = " + elements + ")"
+                            treeSet.subSet(from, to), set.subSet(from, to),
+                            "in subSet(" + from + ", " + to + ") " + context
                     );
                 } else {
                     try {
+                        //noinspection ResultOfMethodCallIgnored
                         set.subSet(from, to);
                         Assert.fail("IllegalArgumentException expected");
                     } catch (final IllegalArgumentException ignored) {
@@ -340,75 +246,35 @@ public class SortedSetTest extends BaseTest {
                     }
                 }
             }
-        }
-    }
-
-    protected Collection<Integer> values(final List<Integer> elements) {
-        return concat(inAndOut(elements), Arrays.asList(0, Integer.MAX_VALUE, Integer.MIN_VALUE));
-    }
-
-    @Test
-    public void test15_tailSetPerformance() {
-        performance("tailSet", () -> {
-            final SortedSet<Integer> set = performanceSet(PERFORMANCE_SIZE);
-            for (final Integer element : set) {
-                Assert.assertTrue(null, set.tailSet(element).contains(element));
-            }
         });
+    }
+
+    protected boolean compare(final Comparator<Integer> comparator, final Integer from, final Integer to) {
+        return comparator.compare(from, to) <= 0;
     }
 
     @Test
     public void test16_first() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            final SortedSet<Integer> set = set(elements, comparator);
-            if (set.isEmpty()) {
-                try {
-                    set.first();
-                    Assert.fail("first() should throw NoSuchElementException for empty set");
-                } catch (final NoSuchElementException e) {
-                    // Expected behavior
-                }
-            } else {
-                Assert.assertEquals("first() " + "(comparator = " + comparator + ", elements = " + elements + ")", set(elements, comparator).first(), set.first());
-            }
-        }
+        testFirstLast("first", SortedSet::first);
     }
 
     @Test
     public void test17_last() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
+        testFirstLast("last", SortedSet::last);
+    }
 
-            final SortedSet<Integer> set = set(elements, comparator);
-            if (set.isEmpty()) {
+    private static void testFirstLast(final String name, final Function<SortedSet<Integer>, Integer> action) {
+        test((elements, comparator, treeSet, set, context) -> {
+            if (elements.isEmpty()) {
                 try {
-                    set.last();
-                    Assert.fail("last() should throw NoSuchElementException for empty set");
+                    action.apply(set);
+                    Assert.fail(name + "() should throw NoSuchElementException for empty set");
                 } catch (final NoSuchElementException e) {
                     // ok
                 }
             } else {
-                Assert.assertEquals("last() " + "(comparator = " + comparator + ", elements = " + elements + ")", set(elements, comparator).last(), set.last());
+                Assert.assertEquals(name + "() (comparator = " + comparator + ", elements = " + elements + ")", action.apply(treeSet), action.apply(set));
             }
-        }
-    }
-
-    @Test
-    public void test18_copySource() {
-        final List<Integer> list = new ArrayList<>(List.of(1, 10, 100));
-        final SortedSet<Integer> integers = create(new Object[]{list}, Collection.class);
-        assertEq(new TreeSet<>(List.of(1, 10, 100)), integers, "initial");
-        list.set(1, 20);
-        assertEq(new TreeSet<>(List.of(1, 10, 100)), integers, "mutated");
-    }
-
-    @Test
-    public void test19_immutableSource() {
-        final SortedSet<Integer> integers = create(new Object[]{List.of(1, 100, 10)}, Collection.class);
-        assertEq(new TreeSet<>(List.of(1, 10, 100)), integers, "initial");
+        });
     }
 }
